--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# Compiled class file
+# Artifacts
+target
 *.class
 
 # Log file
@@ -21,3 +22,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# IDE #
+.idea
+
+# OS #
+.DS_Store
