--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,30 @@
-# Artifacts
-target
-*.class
+HELP.md
+/target/
+!.mvn/wrapper/maven-wrapper.jar
+*.DS_Store
 
-# Log file
-*.log
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# IDE #
+### IntelliJ IDEA ###
 .idea
+*.iws
+*.iml
+*.ipr
 
-# OS #
-.DS_Store
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+/build/
+
+### VS Code ###
+.vscode/
